Hide empty slot count span to avoid needless gap
When empty but not hidden, the gap between it and the next element would still be there.

--- a/index.css
+++ b/index.css
@@ -11,6 +11,10 @@ body>div {
   color: gray;
 }
 
+#slotsSpan:empty {
+  display: none;
+}
+
 #slotSpan {
   flex: 1;
 }
